@@ -37,7 +37,8 @@ class EditCardDlg(QtGui.QDialog, Ui_EditCardDlg, AddEditCards,
 
     def activate(self):
         self.retranslateUi(self)
-
+        self.exec_()
+        
     def _store_state(self):
         self.config()["edit_card_dlg_state"] = self.saveGeometry()
             
